# multifluids_icferst

./: .gitignore  AUTHORS  Jenkinsfile  Makefile  Makefile.in  Makefile.in.orig  README  VSCode_DebuggingInstructions.txt  aclocal.m4  aclocal.m4.orig  config.status  configure  configure.ac  configure.ac~  configure.in  configure2  configure~  fort.3  fort.6  fort.7  node_coo.txt  node_coo2.txt  operators.mod  para.mod  version.inc
ICFERST/: AUTHORS  Makefile  Makefile.in  README  input_diamond_correspondence.txt  main.cpp
adjoint/: Makefile.in
assemble/: Adapt_Integration.F90  Adapt_State.F90  Advection_Diffusion_CG.F90  Diagnostic_fields_wrapper.F90  Full_Projection.F90  Implicit_Solids.F90  Makefile  Makefile.dependencies  Makefile.in  Mba2d_Integration.F90  Multiphase.F90  Node_Locking.F90  Zoltan_callbacks.F90  Zoltan_detectors.F90  Zoltan_integration.F90  qmesh.F90
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
bathymetry/: Makefile  Makefile.in
climatology/: Makefile
debian/: rules
debug/: Makefile  Makefile.in
decomp/: Makefile.in
diagnostics/: Diagnostic_Fields_Interfaces.F90  Diagnostic_Fields_New.F90  Diagnostic_Fields_New.F90.in  Makefile  Makefile.dependencies  Makefile.in  Simple_Diagnostics.F90
docker/: Dockerfile.bionic  Dockerfile.focal  Dockerfile.noble  installation.profile
docs/: _extract___from___state_8_f90.html  _extract___from___state_8_f90.js  _extract___from___state_8_f90__incl.map  _extract___from___state_8_f90__incl.md5  _i_phreeqc__interface_8_f90.html  _i_phreeqc__interface_8_f90.js  _multiphase___prototype___wrapper_8_f90.html  _multiphase___prototype___wrapper_8_f90.js  _multiphase___prototype___wrapper_8_f90__incl.map  _multiphase___prototype___wrapper_8_f90__incl.md5  _multiphase___prototype___wrapper_8_f90_a03cf8b08de9b05fadef22cafd616c9e1_cgraph.md5  _multiphase___prototype___wrapper_8_f90_a03cf8b08de9b05fadef22cafd616c9e1_icgraph.md5  _multiphase___prototype___wrapper_8_f90_a0849c5f8b4a25b1987221c6a5a69eeda_cgraph.map  _multiphase___prototype___wrapper_8_f90_a0849c5f8b4a25b1987221c6a5a69eeda_cgraph.md5  _multiphase___prototype___wrapper_8_f90_a3a9debcf70f4cf1cbe41a40be9fdb5e6_cgraph.map  _multiphase___prototype___wrapper_8_f90_a3a9debcf70f4cf1cbe41a40be9fdb5e6_cgraph.md5  _multiphase___prototype___wrapper_8_f90_a4572cb0a047ae7ee4907ed2281f34349_icgraph.map  _multiphase___prototype___wrapper_8_f90_a4e7c8c33fc4b27a2a9d603dd20373b75_icgraph.map  _multiphase___prototype___wrapper_8_f90_a4e7c8c33fc4b27a2a9d603dd20373b75_icgraph.md5  _multiphase___prototype___wrapper_8_f90_a514792d55b23f92dbb2b82dbf9bb8b16_cgraph.map  _multiphase___prototype___wrapper_8_f90_a514792d55b23f92dbb2b82dbf9bb8b16_cgraph.md5  _multiphase___prototype___wrapper_8_f90_a514792d55b23f92dbb2b82dbf9bb8b16_icgraph.map  _multiphase___prototype___wrapper_8_f90_a514792d55b23f92dbb2b82dbf9bb8b16_icgraph.md5  _multiphase___prototype___wrapper_8_f90_a99884d69d5088dea5829f0059cd7c941_cgraph.map  _multiphase___prototype___wrapper_8_f90_a99884d69d5088dea5829f0059cd7c941_icgraph.map  _multiphase___prototype___wrapper_8_f90_ac647ed2896f73c1bde8778fb01f67a6e_cgraph.map  _multiphase___prototype___wrapper_8_f90_ac647ed2896f73c1bde8778fb01f67a6e_cgraph.md5  _multiphase___prototype___wrapper_8_f90_ac647ed2896f73c1bde8778fb01f67a6e_icgraph.map  _multiphase___prototype___wrapper_8_f90_ac647ed2896f73c1bde8778fb01f67a6e_icgraph.md5  _multiphase___time_loop_8_f90.html  _multiphase___time_loop_8_f90.js  _multiphase___time_loop_8_f90__incl.map  _multiphase___time_loop_8_f90__incl.md5  _multiphase___time_loop_8_f90_aa42a6f5cdc900bd4a54bb2b7be3975be_cgraph.map  _multiphase___time_loop_8_f90_aa42a6f5cdc900bd4a54bb2b7be3975be_cgraph.md5  _multiphase___time_loop_8_f90_aa42a6f5cdc900bd4a54bb2b7be3975be_icgraph.map  _multiphase___time_loop_8_f90_aa42a6f5cdc900bd4a54bb2b7be3975be_icgraph.md5  (+2671 more)
solidity/: AUTHORS  Makefile.in  Readme.txt  aclocal.m4  config.status  configure  configure.in
solidity/include/: confdefs.h
solidity/source/: Makefile  Makefile.in  Y3D_interf.c  Y3Dad.c  Y3Dap.c  Y3Dd.h  Y3Dfd.c  Y3Did.c  Y3Dinertia.c  Y3Dpacking.c  Y3Drd.c  Y3Dreset.c  Y3Dring.c  Y3Drscale.c  Y3Dsd.c  Yproto.h  frame.c  frame.h
solidity/tests/falling_sphere/: IAP.geo  IAP.msh  fluidity.log-0  fragment.txt  matrixdump  pressure.txt  ring.msh  solid.Y3D
solidity/tests/falling_sphere/solid.gid/: solid.cnd  solid.post.vv  solid.prb
solidity/tests/fracture_single_block/: FRAC_ad.mpml  IAP.geo~  circle_frac.Y3D~  matrixdump  matrixdump.info  ring.msh  toe_zero.txt
solidity/tests/fracture_single_block/gid/Mescape.gid/: Mescape.lin  Mescape.msh  Mescape.prb  Mescape.vv
solidity/tests/fracture_single_block/gid/sb.gid/: sb.grp
solidity/tests/fracture_single_block/gid/sb2.gid/: sb2.geo  sb2.grp
solidity/tests/fracture_single_block_twoblocks/: IAP.msh  JointToFEM.txt  Ytmp  box.msh  continuum.msh  continuum_1.msh  continuum_back.msh  log_220317.txt  m2vtucrack3D  matrixdump  nfvel_output.txt_2  nfvel_output.txt_4  ring.msh  surface_1.msh  surface_joint.txt  termV_linear.Y3D
solidity/tests/fracture_single_block_twoblocks/single_crack.gid/: single_crack.Y3D  single_crack.cnd  single_crack.msh  single_crack.rdr  single_crack.vv
solidity/tests/fracture_single_block_twoblocks/textback/: JointToFEM.txt  friction.txt  nfvel_output.txt  nupdate_output.txt  perm.txt
solidity/tests/thermal_coupling_conduction_validation/: fluid_coupling.mpml  fluid_coupling.stat  fluid_validation.mpml  fragment.txt  mesh-adapted-03-005-03.msh  pressure.txt
solidity/tests/thermal_coupling_flow_past_sphere/: fluid_coupling.mpml  fluid_validation.mpml  mesh_adapt_005.msh  pressure.txt
solidity/tests/thermal_coupling_flow_past_sphere/solid.gid/: solid.geo  solid.mat  solid.prb  solid.rdr
solidity/tools/: quad2lin.F90
solidity/tools/B3D/source/: Makefile  frame.c
solidity/tools/GiD/B3D.gid/: B3D.bas  B3D.prb
solidity/tools/GiD/GiD_B3DMC_cj215/: GID_B3D.c
solidity/tools/m2vtu/m2vtu3D/: Makefile  cubicsolver.h  m2vtu.cpp
solidity/tools/m2vtu/m2vtu3D_crack/: Yproto.h  m2vtu.cpp
(+5522 files in other folders)
